Prevent wrapping first column of tables.
Shins inserts chevrons to indicate nested of fields, which
will wrap onto multiple lines on smaller screens.

--- a/pub/css/screen_overrides.css
+++ b/pub/css/screen_overrides.css
@@ -180,3 +180,6 @@ li > ul {
 .page-wrapper .dark-box {
     width: 30%;
 }
+tr > td:first-child {
+    white-space: nowrap;
+}
